Rewrite Javadoc and fix some typos